@@ -1,9 +1,5 @@
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import java.net.URI
-
-fun properties(key: String) = project.findProperty(key).toString()
-group = properties("libraryGroup")
-version = properties("libraryVersion")
+group = providers.gradleProperty("libraryGroup").get()
+version = providers.gradleProperty("libraryVersion").get()
 
 plugins {
     `java-library`
@@ -21,7 +17,7 @@ repositories {
 dependencies {
     implementation(project(":core"))
 
-    implementation(libs.groovy.all) 
+    implementation(libs.groovy.all)
 
     compileOnly(libs.kotlinx.coroutines)
     compileOnly(kotlin("stdlib"))
@@ -33,21 +29,4 @@ dependencies {
     testImplementation(libs.junit.jupiter.api) // Version from BOM
     testRuntimeOnly(libs.junit.jupiter.engine) // Version from BOM
 
-}
-
-tasks {
-
-    test {
-        useJUnitPlatform()
-        systemProperty("surefire.useManifestOnlyJar", "false")
-        testLogging {
-            events(TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED)
-            exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-        }
-        jvmArgs(
-            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-        )
-    }
 }
