@@ -1,9 +1,5 @@
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import java.net.URI
-
-fun properties(key: String) = project.findProperty(key).toString()
-group = properties("libraryGroup")
-version = properties("libraryVersion")
+group = providers.gradleProperty("libraryGroup").get()
+version = providers.gradleProperty("libraryVersion").get()
 
 plugins {
     `java-library`
@@ -31,22 +27,6 @@ dependencies {
     testImplementation(platform(libs.junit.bom))
     testImplementation(libs.junit.jupiter.api) // Version from BOM
     testRuntimeOnly(libs.junit.jupiter.engine) // Version from BOM
-    testImplementation(libs.scala.java8.compat) 
+    testImplementation(libs.scala.java8.compat)
 
-}
-
-tasks {
-    test {
-        useJUnitPlatform()
-        systemProperty("surefire.useManifestOnlyJar", "false")
-        testLogging {
-            events(TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.FAILED)
-            exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-        }
-        jvmArgs(
-            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-            "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-        )
-    }
 }
